--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,5 @@
+/*TODO:
+ - add comments to each CSS line */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -30,10 +32,6 @@ body {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
 }
 
 .header div ul li {
