updated class name, moved css code blocks into new more logical order

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -48,7 +48,8 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/* BANNER PICTURE */
+.front-page-banner { 
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -57,23 +58,13 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
+/* BELOW IS THE MAIN CONTENT SECTION OF THE PAGE */
 
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
-/* Consolidated all duplicate redundant code into one class instead of 3, called .main-content-panel and added class tags to divs */
 
 .main-content-panel {
     margin-bottom: 20px;
@@ -93,6 +84,18 @@ p {
     font-size: 36px;
 }
 
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+/* BELOW IS THE SIDE PANEL SECTION */
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -103,8 +106,6 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-/* MIGHT BE ABLE TO MOVE Benefit sections into just benefits, and then use benefits img h3 */
 
 .benefit-sections {
     margin-bottom: 32px;
@@ -121,5 +122,4 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-/* CONSOLIDATED ALL ABOVE REDUNDANT/REPEAT CODE INTO ONE CLASS called benefit sections */
 
